# NovaCockpit

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  vehicledata.cpp  vehicledata.h
